--- a/index.html
+++ b/index.html
@@ -211,9 +211,9 @@
   <div class="card">
     <h2>Galería de Soluciones</h2>
     <div class="galeria">
-      <img src="Imagen 1.png" alt="Solución IA 1" />
-      <img src="Imagen 2.png" alt="Solución IA 2" />
-      <img src="Imagen 3.png" alt="Solución IA 3" />
+      <img src="imagen1.png" alt="Solución IA 1" />
+      <img src="imagen2.png" alt="Solución IA 2" />
+      <img src="imagen3.png" alt="Solución IA 3" />
     </div>
   </div>
 </section>
